--- a/lateb_orga/pubspec.yaml
+++ b/lateb_orga/pubspec.yaml
@@ -28,6 +28,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  firebase_core: ^0.4.0+9
+  firebase_auth: ^0.14.0+5
+
+  flutter_signin_button: ^1.1.0
+
+  google_sign_in: ^4.4.4
 
 dev_dependencies:
   flutter_test:
@@ -44,9 +50,14 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  fonts:
+    - family: MoonFlower
+      fonts:
+        - asset: fonts/MoonFlower.ttf
+
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - images/teubi.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
